--- a/smieci/app/src/main/AndroidManifest.xml
+++ b/smieci/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:theme="@style/Theme.Smieci"
         tools:targetApi="31">
         <activity
-            android:name=".IncludeViewActivity"
-            android:exported="false" />
+            android:name=".DodajDane"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
