nowe layouty i cos tam jeszcze

--- a/smieci/app/src/main/AndroidManifest.xml
+++ b/smieci/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:theme="@style/Theme.Smieci"
         tools:targetApi="31">
         <activity
-            android:name=".DodajDane"
+            android:name=".Logowanie"
             android:exported="false"
             android:theme="@style/Theme.AppCompat"/>
+        <activity
+            android:name=".DodajDane"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
