--- a/smieci/app/src/main/AndroidManifest.xml
+++ b/smieci/app/src/main/AndroidManifest.xml
@@ -16,9 +16,14 @@
         android:theme="@style/Theme.Smieci"
         tools:targetApi="31">
         <activity
-            android:name=".DodawanieInformacji"
+            android:name=".Rejestracja"
             android:exported="false"
             android:theme="@style/Theme.AppCompat"/>
+
+        <activity
+            android:name=".DodawanieInformacji"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".DodawanieLokalizacji"
             android:exported="false"
