--- a/smieci/app/src/main/AndroidManifest.xml
+++ b/smieci/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Smieci">
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
