--- a/smieci/app/src/main/AndroidManifest.xml
+++ b/smieci/app/src/main/AndroidManifest.xml
@@ -17,9 +17,13 @@
         android:theme="@style/Theme.Smieci"
         tools:targetApi="31">
         <activity
-            android:name=".UserPanel"
+            android:name=".ZmienHaslo"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity
+            android:name=".UserPanel"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".Rejestracja"
             android:exported="false"
